--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
 		"string_view": "c",
 		"unordered_map": "c",
 		"utility": "c",
-		"vector": "c"
+		"vector": "c",
+		"string.h": "c",
+		"__bit_reference": "c",
+		"algorithm": "c",
+		"chrono": "c"
 	}
 }
